@@ -4,6 +4,7 @@ Revision history for Mojo-IOLoop-ReadWriteFork
        * Fix "Use of uninitialized value in numeric eq (==) at ReadWriteFork.pm line 182."
        * Add support for write() before child process has started
        * Add support for "drain" callback to write()
+       * Add run(). a simpler version start()
 
 0.05     Wed Feb 19 13:29:54 2014
        * Fix "read" event cannot change ERRNO from sysread()
